--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql #mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: "123456"
-  host: 127.0.0.1
+  #username: root
+  #password: "123456"
+  #host: 127.0.0.1
 
 development:
   <<: *default
